--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@ layout: default
 
 <!-- <body> -->
 <div class="flex bg-warning">
-    <p>hello</p>
+    <div class="box" id="bluebox"><!-- flex item -->
+        <p>DIV #1</p>
+    </div>
 </div>
 <!-- </div> -->
 <!-- </body>    -->
