--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div class="flex bg-warning">
+<div class="flex align-items-center bg-info">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
