--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div class="align-items-center flex bg-warning">
+<div class="flex justify-content-center bg-warning">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
