--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div class="flex justify-content-center bg-warning">
+<div class="d-md-flex align-items-center justify-content-center">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
