--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
 .box {
     width: 300px;
     margin: 5px;
-    text-align: cente;
+    text-align: center;
 /*    padding-top: 20px; */
 }
 
