--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 
 <!-- <body> -->
 <div class="d-md-flex align-items-center justify-content-center bg-warning">
-    <div class="box" id="bluebox"><!-- flex item -->
+    <div class="box"><!-- flex item -->
         <p>DIV #1</p>
     </div>
 </div>
