--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
-    vertical-align: auto;
+    vertical-align: bottom;
 /*    padding-top: 20px; */
 }
 
@@ -33,7 +33,7 @@ layout: default
 
 <!-- <body> -->
 <div class="d-md-flex align-items-center justify-content-center bg-warning">
-    <div class="box"><!-- flex item -->
+    <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
 </div>
