--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
-    vertical-align: bottom;
 /*    padding-top: 20px; */
 }
 
@@ -35,6 +34,10 @@ layout: default
 <div class="d-md-flex align-items-center justify-content-center bg-warning">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
+    </div>
+
+    <div class="box" id="red"><!-- flex item -->
+        <p>DIV #2</p>
     </div>
 </div>
 <!-- </div> -->
