--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     height: 300px; /* for demo purposes */
     border: 1px solid black; /* for demo purposes */
     background-color: #eee; /* for demo purposes */
-    height: 100%;
+    heigh: 100%;
 }
 
 .box {
