--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
     height: 300px; /* for demo purposes */
     border: 1px solid black; /* for demo purposes */
     background-color: #eee; /* for demo purposes */
-    heigh: 100%;
+    min-height: 100%;
 }
 
 .box {
@@ -37,7 +37,7 @@ layout: default
         <p>DIV #1</p>
     </div>
 
-    <div class="box" id="redbox"><!-- flex item -->
+    <div class="box" id="redox"><!-- flex item -->
         <p>DIV #2</p>
     </div>
 </div>
