--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
         <p>DIV #1</p>
     </div>
 
-    <div class="box" id="redox"><!-- flex item -->
+    <div class="box" id="redbox"><!-- flex item -->
         <p>DIV #2</p>
     </div>
 </div>
