--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@ layout: default
     height: 300px; /* for demo purposes */
     border: 1px solid black; /* for demo purposes */
     background-color: #eee; /* for demo purposes */
-    min-height: 100%;
 }
 
 .box {
@@ -32,7 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div class="d-md-flex align-items-center justify-content-center bg-warning">
+<div class="d-md-flex align-items-center justify-content-center bg-warning h-100">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
