--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
     width: 300px;
     margin: 5px;
     text-align: center;
-/*    padding-top: 20px; */
+    padding-top: 20px;
 }
 
 #bluebox { background: aqua; }
@@ -31,7 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div class="d-md-flex align-items-center justify-content-center bg-warning h-100">
+<div class="d-md-flex align-items-center justify-content-center bg-warning">
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
