--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ layout: default
     align-items: center; /* align items horizontally, in this case */
     height: 300px; /* for demo purposes */
     border: 1px solid black; /* for demo purposes */
-    background-color: #6520e4; /* for demo purposes */
+    background-color: #4584d6; /* for demo purposes */
 }
 
 .box {
