--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <style>
 
 .container_test {
-    display: d-md-flex; /* establish flex container */
+    display: md-flex; /* establish flex container */
 /*    flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
     align-items: center; /* align items horizontally, in this case */
