--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
 <style>
 
 .container_test {
-    display: md-flex; /* establish flex container */
+    display: flex; /* establish flex container */
 /*    flex-direction: column; /* make main-axis vertical */
     justify-content: center; /* align items vertically, in this case */
     align-items: center; /* align items horizontally, in this case */
@@ -31,8 +31,8 @@ layout: default
 
 
 <!-- <body> -->
-<!-- <div class="d-md-flex align-items-center justify-content-center bg-warning">   -->
-<div class="container_test">
+<div class="d-md-inline-flex align-items-center justify-content-center bg-warning">
+<!-- <div class="container_test"> -->
     <div class="box" id="bluebox"><!-- flex item -->
         <p>DIV #1</p>
     </div>
