--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@ layout: default
 
 
 <!-- <body> -->
-<div class="d-md-flex align-items-center justify-content-center height-300px bg-warning">
-<!-- <div class="container_test"> -->
-    <div class="box" id="bluebox"><!-- flex item -->
-        <p>DIV #1</p>
-    </div>
+<div style="height: 300px; background-color: #4584d6;"></div>
+    <div class="d-md-flex align-items-center justify-content-center h-100">
+    <!-- <div class="container_test"> -->
+        <div class="box" id="bluebox"><!-- flex item -->
+            <p>DIV #1</p>
+        </div>
 
-    <div class="box" id="redbox"><!-- flex item -->
-        <p>DIV #2</p>
+        <div class="box" id="redbox"><!-- flex item -->
+            <p>DIV #2</p>
+        </div>
     </div>
 </div>
 <!-- </div> -->
