--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div style="height: 300px; background-color: #4584d6;"></div>
+<div style="height: 300px; background-color: #4584d6;">
     <div class="d-md-flex align-items-center justify-content-center h-100">
     <!-- <div class="container_test"> -->
         <div class="box" id="bluebox"><!-- flex item -->
@@ -43,5 +43,4 @@ layout: default
         </div>
     </div>
 </div>
-<!-- </div> -->
 <!-- </body>    -->
