--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: default
         </div>
 
         <div class="box" id="redbox"><!-- flex item -->
-            <p>DIV #2</p>
+            <p>Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         </div>
     </div>
 </div>
