--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div style="height: 300px; background-color: yellow;">
+<div style="height: 300px; background-color: lightblue;">
     <div class="d-md-flex align-items-center justify-content-center h-100">
     <!-- <div class="container_test"> -->
         <div class="box" id="bluebox"><!-- flex item -->
