--- a/index.html
+++ b/index.html
@@ -34,14 +34,21 @@ layout: default
 <div style="height: 300px; background-color: #ffc107;">
     <div class="d-md-flex align-items-center justify-content-center h-100">
     <!-- <div class="container_test"> -->
-        <div class="box" id="bluebox"><!-- flex item -->
+        <div class="col-md-4 align-self-stretch bg-info">
+            <div class="cover-author-image">
+                <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
+            </div>
+        </div>
+        <!--
+        <div class="box" id="bluebox">
             <p>DIV #1</p>
         </div>
 
-        <div class="box" id="redbox"><!-- flex item -->
+        <div class="box" id="redbox">
             <p>DIV #2</p>
-            <!-- <p>Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p> -->
+            <p>Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         </div>
+        -->
     </div>
 </div>
 <!-- </body>    -->
