--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@ layout: default
         <div class="box" id="bluebox">
             <p>DIV #1</p>
         </div>
-
+        -->
         <div class="box" id="redbox">
-            <p>DIV #2</p>
+            <!-- <p>DIV #2</p> -->
             <p>Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         </div>
-        -->
+
     </div>
 </div>
 <!-- </body>    -->
