--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@ layout: default
             <p>DIV #1</p>
         </div>
         -->
-        <div class="box" id="redbox">
+        <!-- <div class="box" id="redbox"> -->
+        <div class="col-md-8 bg-primary"    
             <!-- <p>DIV #2</p> -->
             <p>Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
         </div>
