--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 <div style="height: 300px; background-color: #ffc107;">
     <div class="d-md-flex align-items-center justify-content-center h-100">
     <!-- <div class="container_test"> -->
-        <div class="col-md-3 bg-info">
+        <div class="col-md-2 bg-info">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
@@ -49,7 +49,9 @@ layout: default
             <!-- 
                 <p>DIV #2</p> 
             -->
-            <p>Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
+            <h1 class="mt-3 font-weight-bold serif-font">Improving Healthcare through Technology</h1>
+            <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
+            <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
         </div>
 
     </div>
