--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
 <div style="height: 300px; background-color: #ffc107;">
     <div class="d-md-flex align-items-center justify-content-center h-100">
     <!-- <div class="container_test"> -->
-        <div class="col-md-2 bg-info">
+        <div class="col-md-flex bg-info">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
@@ -45,7 +45,7 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-8 bg-primary"> 
+        <div class="col-md-flex bg-primary"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
