--- a/index.html
+++ b/index.html
@@ -31,10 +31,9 @@ layout: default
 
 
 <!-- <body> -->
-<div style="height: 300px; background-color: #ffc107;">
-    <div class="d-md-flex align-items-center justify-content-center h-100">
+    <div class="d-md-flex align-items-center justify-content-center h-100" style="height: 300px; background-color: #ffc107;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex margin: 5px bg-info">
+        <div class="col-md-flex p-5 bg-info">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
