--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-flex bg-primary"> 
+        <div class="col-md-flex p-5 bg-primary"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
