--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
             <!-- 
                 <p>DIV #2</p> 
             -->
-            <h1 class="font-weight-bold serif-font">Innovating in Healthcare with Technology</h1>
+            <h1 class="font-weight-bold serif-font">Improving Healthcare with Tech</h1>
             <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
         </div>
