--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@ layout: default
 
 
 <!-- <body> -->
-    <div class="d-md-flex align-items-center justify-content-center h-100" style="height: 540px; background-color: #ffc107;">
+<div style="height: 540px; background-color: #ffc107;">
+    <div class="d-md-flex align-items-center justify-content-center h-100">
     <!-- <div class="container_test"> -->
         <div class="col-md-flex p-5 bg-info">
             <div class="cover-author-image">
@@ -49,10 +50,9 @@ layout: default
                 <p>DIV #2</p> 
             -->
             <h1 class="font-weight-bold serif-font">Improving Healthcare with Tech</h1>
-            <p class="lead mb-3">Hi, I'm Sandy.  I am a informatics strategist and cloud architect, focused on the Healthcare & Life Sciences industry.  I specialize in advanced analytics and AI solutions to improve health outcomes.</p>
+            <p class="lead mb-3">Sandy Su is a technology strategist and cloud architect, specializing in advanced analytics and AI solutions.  Her interest areas lie in the secondary use of healthcare data to improve health outcomes.</p>
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
         </div>
-
     </div>
 </div>
 <!-- </body>    -->
