--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@ layout: default
 
 
 <!-- <body> -->
-<div style="height: 540px; background-color: #ffc107;">
-    <div class="d-md-flex align-items-center justify-content-center h-100">
+    <div class="d-md-flex align-items-center justify-content-center h-100" style="background-color: #ffc107;">
     <!-- <div class="container_test"> -->
         <div class="col-md-flex p-5 bg-info">
             <div class="cover-author-image">
@@ -53,6 +52,7 @@ layout: default
             <p class="lead mb-3">Sandy Su is a technology strategist and cloud architect, specializing in advanced analytics and AI solutions.  Her interest areas lie in the secondary use of healthcare data to improve health outcomes.</p>
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
         </div>
+
     </div>
 </div>
 <!-- </body>    -->
