--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ layout: default
                 <p>DIV #2</p> 
             -->
             <h1 class="font-weight-bold serif-font">Improving Healthcare with Tech</h1>
-            <p class="lead mb-3">Sandy Su is a technology strategist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes solution design and development, emerging tech value proposition, and exploring secondary use of healthcare data to improve health outcomes.</p>
+            <p class="lead mb-3">Sandy Su is a technology strategist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes solution design and development, evaluating emerging tech's value proposition, and experimenting with the latest technologies and its potential impact on health outcomes.</p> 
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
         </div>
 
