--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ layout: default
 
 
 <!-- <body> -->
-    <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px; background-color: #ffc107;">
+    <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex p-5 bg-info">
+        <div class="col-md-flex p-5">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
@@ -44,12 +44,12 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-flex p-3 bg-primary"> 
+        <div class="col-md-flex p-3"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
             <h1 class="font-weight-bold serif-font">Improving Healthcare with Tech</h1>
-            <p class="lead mb-3">Sandy Su is a technology strategist and cloud architect, specializing in advanced analytics and AI solutions.  With a background working with Healthcare & Life Sciences organizations, her expertise includes solution design and development, technology strategy, and emerging tech evaluation and value proposition.  and its impact on health outcomes.</p> 
+            <p class="lead mb-3">Sandy Su is a technology strategist and cloud architect, specializing in advanced analytics and AI solutions.  With a background working with Healthcare & Life Sciences organizations, her expertise includes solution design and development, analytics strategy, and emerging tech value proposition.</p> 
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
         </div>
 
