--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 <!-- <body> -->
     <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px; background-color: blueviolet;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex p-5 bg-primary">
+        <div class="col-md-flex p-1 bg-primary">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
@@ -48,7 +48,7 @@ layout: default
             <!-- 
                 <p>DIV #2</p> 
             -->
-            <h1 class="font-weight-bold serif-font justify-content-center">Healthcare Technology Strategist | Cloud Architect </h1>
+            <h1 class="font-weight-bold serif-font align-items-center">Health Technology Strategist | Cloud Architect </h1>
             <!-- <p class="lead mb-3">Sandy Su is a technologist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes business strategy, emerging tech analysis, and solution design and development.</p> -->
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">About me</a>
         </div>
