--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-flex p-3 align-items-center bg-info"> 
+        <div class="col-md-flex p-3 align-items-center text-center bg-info"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
-            <h1 class="font-weight-bold serif-font text-center">Health Technology Strategist | Cloud Architect </h1>
+            <h1 class="font-weight-bold serif-font text">Health Technology Strategist | Cloud Architect </h1>
             <!-- <p class="lead mb-3">Sandy Su is a technologist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes business strategy, emerging tech analysis, and solution design and development.</p> -->
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-5 btn-lg mb-3">Explore</a>
             <br>
