--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ layout: default
             <!-- 
                 <p>DIV #2</p> 
             -->
-            <h1 class="font-weight-bold serif-font text">Health Technology Strategist | Cloud Architect </h1>
+            <h1 class="font-weight-bold serif-font text">Health Informatics Strategist | Cloud Architect </h1>
             <!-- <p class="lead mb-3">Sandy Su is a technologist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes business strategy, emerging tech analysis, and solution design and development.</p> -->
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-3 btn-md mb-3">Explore</a>
             <br>
