--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@ layout: default
 
 
 <!-- <body> -->
-    <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px; background-color: blueviolet;">
+    <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px; background-color: white;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex p-5 bg-primary">
+        <div class="col-md-flex p-5 bg-white">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
@@ -44,7 +44,7 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-flex p-3 align-items-center text-center bg-info"> 
+        <div class="col-md-flex p-3 align-items-center text-center bg-white"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
