--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 <!-- <body> -->
     <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px; background-color: purple;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex mt-5 bg-info text-center">
+        <div class="col-md-flex pt-5 bg-info text-center">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
