--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ layout: default
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
-            <h1 class="font-weight-bold serif-font text mt-2">Sandy Su</h1>
+            <h1 class="font-weight-bold serif-font text">Sandy Su</h1>
         </div>
         <!--
         <div class="box" id="bluebox">
@@ -49,7 +49,7 @@ layout: default
             <!-- 
                 <p>DIV #2</p> 
             -->
-            <h1 class="font-weight-bold serif-font text">Reimagining healthcare with big data & AI</h1>
+            <h1 class="font-weight-light serif-font text">Reimagining healthcare with big data & AI</h1>
             <!-- <p class="lead mb-3">Sandy Su is a technologist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes business strategy, emerging tech analysis, and solution design and development.</p> -->
             <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-3 btn-md mt-3 mb-3">Explore</a>
             <br>
