--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 <!-- <body> -->
     <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px; background-color: purple;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex pt-5 text-center bg-warning">
+        <div class="col-md-flex p-3 text-center bg-warning">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
@@ -45,13 +45,14 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-flex p-3 align-items-center text-center bg-info"> 
+        <div class="col-md-flex pt-3 align-items-center text-center bg-info"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
             <h3 class="font-weight-light serif-font text">Reimagining healthcare with big data & AI</h3>
+            <br>
             <!-- <p class="lead mb-3">Sandy Su is a technologist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes business strategy, emerging tech analysis, and solution design and development.</p> -->
-            <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-3 btn-md mt-3 mb-3">Explore</a>
+            <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-3 btn-md mt-3">Explore</a>
             <br>
             <p>Get in touch:</p>
             {% include contact.html %}
