--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 <!-- <body> -->
     <div class="col-md-flex align-items-center justify-content-center h-100" style="height: 500px; background-color: purple;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex p-3 text-center bg-warning">
+        <div class="col-md-flex pt-3 text-center bg-warning">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
@@ -45,7 +45,7 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-flex pt-3 align-items-center text-center bg-info"> 
+        <div class="col-md-flex p-3 align-items-center text-center bg-info"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
