--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ layout: default
             <h3 class="font-weight-light serif-font text">Reimagining healthcare with big data & AI</h3>
             <br>
             <!-- <p class="lead mb-3">Sandy Su is a technologist and cloud architect, specializing in advanced analytics and AI solutions.  With a background in the Healthcare & Life Sciences industry, her expertise includes business strategy, emerging tech analysis, and solution design and development.</p> -->
-            <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-3 btn-md mt-3 mb-3">Explore</a>
+            <a href="{{site.baseurl}}/about" class="btn btn-dark text-white px-3 btn-md mb-3">Explore</a>
             <br>
             <p>Get in touch:</p>
             {% include contact.html %}
