--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ layout: default
         </div>
         -->
         <!-- <div class="box" id="redbox"> -->
-        <div class="col-md-flex p-3 align-items-center text-center bg-white"> 
+        <div class="col-md-flex pt-2 align-self-center text-center bg-white"> 
             <!-- 
                 <p>DIV #2</p> 
             -->
