--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ layout: default
 <!-- <body> -->
     <div class="col-md-flex align-self-center justify-content-center h-100" style="height: 400px; background-color: white;">
     <!-- <div class="container_test"> -->
-        <div class="col-md-flex pt-5 text-center bg-white">
+        <div class="col-md-flex text-center bg-white">
             <div class="cover-author-image">
                 <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
             </div>
