--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ layout: default
     <!-- <div class="container_test"> -->
         <div class="col-md-flex text-center bg-info">
             <div class="cover-author-image">
-                <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy.png" alt="profile-pic"/>
+                <img class="img-fluid" src="{{site.baseurl}}/assets/images/sandy3.png" alt="profile-pic"/>
             </div>
             <h1 class="font-weight-bold serif-font text">Sandy Su</h1>
         </div>
